--- a/Lakeside_Film_Site/Views/Home/Index.cshtml
+++ b/Lakeside_Film_Site/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@ Welcome to the Lakeside Video Society
         <input type="submit" value="Set Memberid" />
     </text>
 }@*end of beginform block*@
+<a href="~/Member/MyProfile">My Profile</a>
 
