--- a/Lakeside_Film_Site/Views/Member/Edit.cshtml
+++ b/Lakeside_Film_Site/Views/Member/Edit.cshtml
@@ -16,8 +16,9 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MemberID)
+        @Html.HiddenFor(model => model.Admin)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
@@ -31,49 +32,65 @@
                 @Html.EditorFor(model => model.PWD, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PWD, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MemberName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MemberName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MemberName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Avatar, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Avatar, "", new { @class = "text-danger" })
-            </div>
         </div>*@
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label" })
-            <input type="text" name="ImageFile" value="@Model.Avatar" readonly />
-            <input type="file" name="uploadfile" />
-            @Html.ValidationMessage("uploadfile", "Please select a file", new { @class = "text-danger" })
-        </div>
-
-        <div style="position: absolute; border: 1px solid black; right: 20px; z-index: -1; top: 100px">
-            <img src="~/Content/Images/Products/@Url.Content(Model.Avatar)" style="height:400px; width:400px; " />
-        </div>
+            @Html.TextBoxFor(m => m.Email, new
+   {
+       style = "max-width:440px;width:440px",
+       @maxlength = "50"
+   })
+            </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Admin, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Admin, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Admin, "", new { @class = "text-danger" })
+            @Html.TextBoxFor(m => m.PWD, new
+       {
+           style = "width:160px",
+           @maxlength = "20"
+       })
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="form-group">
+                @Html.LabelFor(model => model.MemberName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.MemberName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.MemberName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            @*<div class="form-group">
+                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Avatar, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Avatar, "", new { @class = "text-danger" })
+                </div>
+            </div>*@
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label" })
+                <input type="text" name="ImageFile" value="@Model.Avatar" readonly />
+                <input type="file" name="uploadfile" />
+                @Html.ValidationMessage("uploadfile", "Please select a file", new { @class = "text-danger" })
+            </div>
+
+            <div style="position: absolute; border: 1px solid black; right: 20px; z-index: -1; top: 100px">
+                <img src="~/Content/Images/Products/@Url.Content(Model.Avatar)" style="height:400px; width:400px; " />
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Admin, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Admin, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Admin, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
             </div>
         </div>
-    </div>
 }
 
 <div>
