--- a/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
+++ b/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li class="divider"></li>
                         <li class="dropdown-header">Members Menu</li>
                         <li> <a href="~/member/MyProfile">My Profile</a> </li>
+                        <li> <a href="~/admin/MemberList">Members</a> </li>
                         @*add extra items here *@
                     </ul>
                     <span style="font-size:x-large;color:#FBD4B7;">
