--- a/Lakeside_Film_Site/Views/Admin/Edit.cshtml
+++ b/Lakeside_Film_Site/Views/Admin/Edit.cshtml
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "MemberList")
 </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
