--- a/Lakeside_Film_Site/Views/Admin/Edit.cshtml
+++ b/Lakeside_Film_Site/Views/Admin/Edit.cshtml
@@ -7,15 +7,16 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("MemberList", "admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         <h4>Member</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MemberID)
+        @Html.HiddenFor(model => model.Admin)
+        
 
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -41,13 +42,25 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Avatar, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Avatar, "", new { @class = "text-danger" })
             </div>
+        </div>*@
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "control-label" })
+            <input type="text" name="Avatar" value="@Model.Avatar" readonly />
+            <input type="file" name="uploadfile" />
+            @Html.ValidationMessage("uploadfile", "Please select a file", new { @class = "text-danger" })
         </div>
+
+        <div style="position: absolute; border: 1px solid black; right: 20px; z-index: -1; top: 100px">
+            <img src="~/Content/Images/Members/@Url.Content(Model.Avatar)" style="height:400px; width:400px; " />
+        </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.Admin, htmlAttributes: new { @class = "control-label col-md-2" })
