Fixed edit page
Didn't have the actionresult name correct in the BeginForm

--- a/Lakeside_Film_Site/Views/Admin/Edit.cshtml
+++ b/Lakeside_Film_Site/Views/Admin/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm("MemberList", "admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     
     <div class="form-horizontal">
