Added part 3 files
The teacher provided us with some files to be added into the project, in order to get the film list working.

--- a/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
+++ b/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                         <li class="divider"></li>
                         <li class="dropdown-header">Members Menu</li>
                         <li> <a href="~/member/MyProfile">My Profile</a> </li>
+                        <li class="divider"></li>
+                        <li class="dropdown-header">Admin Menu</li>
                         <li> <a href="~/admin/MemberList">Members</a> </li>
+                        <li> <a href="~/admin/FilmList">Films</a> </li>
                         @*add extra items here *@
                     </ul>
                     <span style="font-size:x-large;color:#FBD4B7;">
