Added more files
Lakeside Phase 4. This time I edited the namespaces before adding the files.

--- a/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
+++ b/Lakeside_Film_Site/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <li class="divider"></li>
                         <li class="dropdown-header">Members Menu</li>
                         <li> <a href="~/member/MyProfile">My Profile</a> </li>
+                        <li> <a href="~/member/MyReview">My Reviews</a> </li>
                         <li class="divider"></li>
                         <li class="dropdown-header">Admin Menu</li>
                         <li> <a href="~/admin/MemberList">Members</a> </li>
